Perbaiki ukuran phone di style.css

--- a/flower/index.html
+++ b/flower/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../assets/image/gift.png">
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/bootstrap-4.6.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.css">
     <title>From Me, To You</title>
 </head>
 
 <body class="not-loaded">
-    
     <div class="night"></div>
     <div class="flowers">
         <div class="flower flower--1">
@@ -309,9 +310,12 @@
                 <div class="leaf leaf--3"></div>
             </div>
         </div>
-
     </div>
 
+    <script src="../assets/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/bootstrap-4.6.2-dist/js/bootstrap.js"></script>
+    <script src="../assets/bootstrap-4.6.2-dist/js/bootstrap.bundle.js"></script>
+    <script src="../assets/jquery/jquery-3.5.1.slim.min.js"></script>
     <script src="../assets/script.js"></script>
 
 </body>
